[project]
name = "image-misc"
description = """
Miscellaneous nodes for image manipulation.
Download image with bypass, so you can create workflows including image examples.
Foreground estimation and mask apply.
Face composition nodes (to reinsert a processed face).
Advanced image/mask pad/resize (from KJNodes with some additions).
Normalization nodes for low level image pre-processing.
No extra dependencies, just an internal module.
"""
# This is the modern Python mechanism, but not supported
# dynamic = ["version"]
# license = "GPL-3.0-or-later"
# Only this is supported :-(
version = "1.4.0"
license = { file = "LICENSE" }
# The following is just ignored
dependencies = ["seconohe"]

[project.urls]
Repository = "https://github.com/set-soft/ComfyUI-ImageMisc"

[tool.comfy]
PublisherId = "set-soft"
DisplayName = "Image Misc"
Icon = "https://raw.githubusercontent.com/set-soft/ComfyUI-ImageMisc/main/assets/Icon_400x400.jpg"

[tool.setuptools.dynamic]
version = {attr = "nodes.__version__"}

# #######################################
# MyPy (well, yours, useless hinting)
# #######################################
[tool.mypy]
# Basic configuration
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src/"

# This is often needed when starting out, especially with libraries that lack stubs
ignore_missing_imports = true

# You can get stricter over time by removing ignore_missing_imports
# and setting flags like these:
# disallow_untyped_defs = true
# disallow_any_unimported = true

# Tell mypy to ignore errors from third-party libraries if they are not typed
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchaudio.*",
    "pytest.*",
    "cv2.*",
    "colorama.*",
    "tqdm.*",
    "requests.*",
    "comfy.*", # For comfy.utils
    "server.*" # For server.PromptServer
]
ignore_missing_imports = true
